OO-3352: implement Cache-Control everywhere